# AutoDubber

./: .gitignore  README.md  log.out  pyproject.toml  run_service.sh
autodubber/: config.py  main.py  transcript.py  tts.py  video.py
autodubber/api/: app.py
autodubber/templates/: index.html
tests/autodub/: index.html  requirements.txt  transcript.txt
